Add idea evaluation flow

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,9 @@
     }
    ],
    "source": [
-    "for i, idea in enumerate(parsed.ideas, 1):\n",
+    "generated_ideas: ProposedIdeasWrapper = parsed.ideas\n",
+    "\n",
+    "for i, idea in enumerate(generated_ideas, 1):\n",
     "    print(f\"\\n=== Idea {i} ===\")\n",
     "    print(f\"Idea: {idea.idea}\")\n",
     "    print(f\"Audience: {idea.audience}\")\n",
@@ -353,7 +355,315 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1b. Idea evaluation"
+    "### 1b. Idea evaluation\n",
+    "\n",
+    "Now that we have all of these ideas, let's ask the LLM to evaluate the ideas and help us pick the best one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import IdeaEvaluationOutput\n",
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=IdeaEvaluationOutput)\n",
+    "\n",
+    "idea_evaluation_instructions = parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idea_evaluation_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "You are a senior marketing strategist evaluating proposed campaign ideas for an American-style brunch restaurant.\n",
+    "\n",
+    "Evaluate each idea on the following criteria (score from 0-5):\n",
+    "- **Audience Fit**: Does it match the needs or preferences of the specified audience?\n",
+    "- **Clarity**: Is the idea easy to understand and well-articulated?\n",
+    "- **Creativity**: How original or compelling is the campaign concept?\n",
+    "- **Channel Suitability**: Does the distribution method or concept fit real-world marketing channels (e.g., Instagram, flyers, email)?\n",
+    "\n",
+    "Also include brief **comments** on the strengths or weaknesses of each idea.\n",
+    "\n",
+    "Here are the proposed ideas to review:\n",
+    "{idea_text}\n",
+    "\n",
+    "{evaluation_instructions}\n",
+    "\"\"\",\n",
+    "    input_variables=[\"idea_text\"],\n",
+    "    partial_variables={\"evaluation_instructions\": idea_evaluation_instructions}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now take our previous ideas from above and pass them into this prompt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import ProposedIdea\n",
+    "\n",
+    "def format_ideas_for_evaluation(ideas: list[ProposedIdea]) -> str:\n",
+    "    result = []\n",
+    "    for i, idea in enumerate(ideas, 1):\n",
+    "        result.append(f\"\"\"\n",
+    "            Idea {i}:\n",
+    "            Audience: {idea.audience}\n",
+    "            Name: {idea.idea}\n",
+    "            Message: {idea.campaign_message}\n",
+    "            Concept: {idea.concept}\n",
+    "        \"\"\"\n",
+    "        )\n",
+    "    return \"\\n\\n\".join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idea_text = format_ideas_for_evaluation(generated_ideas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "            Idea 1:\n",
+      "            Audience: Families looking for weekend outings\n",
+      "            Name: Family Fun Brunch Day\n",
+      "            Message: Create lasting memories with our budget-friendly $9.99 full breakfast combo, perfect for families!\n",
+      "            Concept: Host a special Family Fun Day every Saturday where kids eat free with the purchase of an adult breakfast combo. Include fun activities like face painting or a small petting zoo to enhance the family outing experience.\n",
+      "        \n",
+      "\n",
+      "\n",
+      "            Idea 2:\n",
+      "            Audience: Health-conscious individuals seeking nutritious, flavorful options\n",
+      "            Name: Healthy Start Sundays\n",
+      "            Message: Kickstart your week with our nutritious Mediterranean wrap, packed with fresh veggies and lean protein!\n",
+      "            Concept: Promote a 'Healthy Start Sunday' where customers can enjoy a discount on the Mediterranean wrap when they order a drink. Share health tips and recipes on social media to engage health-conscious diners.\n",
+      "        \n",
+      "\n",
+      "\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(idea_text[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models import IdeaEvaluationOutput, IdeaEvaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_ideas(ideas: ProposedIdeasWrapper) -> IdeaEvaluationOutput:\n",
+    "    idea_evaluation_full_prompt = idea_evaluation_prompt.format(\n",
+    "        idea_text=format_ideas_for_evaluation(ideas)\n",
+    "    )\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a helpful assistant.\"),\n",
+    "        HumanMessage(content=idea_evaluation_full_prompt)\n",
+    "    ]\n",
+    "    response = llm.invoke(messages)\n",
+    "    return parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluated_ideas: IdeaEvaluationOutput = evaluate_ideas(parsed.ideas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now review the ideas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Idea 1: Family Fun Brunch Day\n",
+      "Audience Fit: 5\n",
+      "Clarity: 5\n",
+      "Creativity: 4\n",
+      "Channel Suitability: 5\n",
+      "Comments: This idea perfectly targets families looking for weekend outings with a clear message and engaging activities. The concept is creative and well-suited for social media promotion.\n",
+      "==================================================\n",
+      "Idea 2: Healthy Start Sundays\n",
+      "Audience Fit: 5\n",
+      "Clarity: 5\n",
+      "Creativity: 4\n",
+      "Channel Suitability: 4\n",
+      "Comments: This campaign aligns well with health-conscious individuals and is clearly articulated. The idea of sharing health tips is creative, but the execution may be limited to social media and in-restaurant promotions.\n",
+      "==================================================\n",
+      "Idea 3: Brunch & Celebrate\n",
+      "Audience Fit: 5\n",
+      "Clarity: 5\n",
+      "Creativity: 4\n",
+      "Channel Suitability: 5\n",
+      "Comments: This idea effectively targets social groups celebrating milestones. The concept is clear and encourages social media engagement, making it suitable for various marketing channels.\n",
+      "==================================================\n",
+      "Idea 4: Brunch Buddy Loyalty Program\n",
+      "Audience Fit: 4\n",
+      "Clarity: 5\n",
+      "Creativity: 3\n",
+      "Channel Suitability: 5\n",
+      "Comments: While this loyalty program is clear and easy to understand, it may not be as exciting or creative as other ideas. However, it is well-suited for email marketing and in-store promotion.\n",
+      "==================================================\n",
+      "Idea 5: Weekend Brunch Specials\n",
+      "Audience Fit: 4\n",
+      "Clarity: 4\n",
+      "Creativity: 3\n",
+      "Channel Suitability: 4\n",
+      "Comments: This idea appeals to both families and health-conscious diners, but it lacks a unique angle. The concept is clear, but it may not stand out in a crowded market.\n",
+      "==================================================\n",
+      "Idea 6: Brunch with a Cause\n",
+      "Audience Fit: 5\n",
+      "Clarity: 5\n",
+      "Creativity: 5\n",
+      "Channel Suitability: 5\n",
+      "Comments: This campaign is highly engaging and appeals to social groups while supporting local charities. The clarity and creativity are strong, and it fits well with various marketing channels.\n",
+      "==================================================\n",
+      "Idea 7: Seasonal Flavor Fest\n",
+      "Audience Fit: 4\n",
+      "Clarity: 4\n",
+      "Creativity: 4\n",
+      "Channel Suitability: 4\n",
+      "Comments: This idea targets both health-conscious individuals and families, promoting fresh ingredients. While it is clear and creative, it may require more specific marketing strategies to reach the audience effectively.\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, evaluation in enumerate(evaluated_ideas.evaluations, 1):\n",
+    "    print(f\"Idea {i}: {evaluation.idea_name}\")\n",
+    "    print(f\"Audience Fit: {evaluation.audience_fit}\")\n",
+    "    print(f\"Clarity: {evaluation.clarity}\")\n",
+    "    print(f\"Creativity: {evaluation.creativity}\")\n",
+    "    print(f\"Channel Suitability: {evaluation.channel_suitability}\")\n",
+    "    print(f\"Comments: {evaluation.comments}\")\n",
+    "    print(\"=\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's sort the ideas by score and then pick the highest-scoring idea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pick_highest_scoring_idea(\n",
+    "    ideas: ProposedIdeasWrapper,\n",
+    "    evaluations: IdeaEvaluationOutput\n",
+    ") -> tuple[ProposedIdea, IdeaEvaluation]:\n",
+    "    \"\"\"\n",
+    "    Given a list of ideas and their evaluations, return the highest scoring idea and its evaluation.\n",
+    "\n",
+    "    Returns:\n",
+    "        A tuple of (ProposedIdea, IdeaEvaluation)\n",
+    "    \"\"\"\n",
+    "    best_score = -1\n",
+    "    best_idea = None\n",
+    "    best_evaluation = None\n",
+    "\n",
+    "    idea_map = {idea.idea: idea for idea in ideas}\n",
+    "\n",
+    "    for evaluation in evaluations.evaluations:\n",
+    "        total_score = (\n",
+    "            evaluation.audience_fit +\n",
+    "            evaluation.clarity +\n",
+    "            evaluation.creativity +\n",
+    "            evaluation.channel_suitability\n",
+    "        )\n",
+    "\n",
+    "        if total_score > best_score:\n",
+    "            best_score = total_score\n",
+    "            best_idea = idea_map.get(evaluation.idea_name)\n",
+    "            best_evaluation = evaluation\n",
+    "\n",
+    "    if best_idea is None or best_evaluation is None:\n",
+    "        raise ValueError(\"No matching idea found for highest scoring evaluation.\")\n",
+    "\n",
+    "    return best_idea, best_evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best idea: Brunch with a Cause\n",
+      "Best evaluation: idea_name='Brunch with a Cause' audience_fit=5 clarity=5 creativity=5 channel_suitability=5 comments='This campaign is highly engaging and appeals to social groups while supporting local charities. The clarity and creativity are strong, and it fits well with various marketing channels.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_idea, best_evaluation = pick_highest_scoring_idea(\n",
+    "    ideas=generated_ideas,\n",
+    "    evaluations=evaluated_ideas\n",
+    ")\n",
+    "\n",
+    "print(f\"Best idea: {best_idea.idea}\")\n",
+    "print(f\"Best evaluation:\\n\")\n",
+    "print(f\"Audience Fit: {best_evaluation.audience_fit}\")\n",
+    "print(f\"Clarity: {best_evaluation.clarity}\")\n",
+    "print(f\"Creativity: {best_evaluation.creativity}\")\n",
+    "print(f\"Channel Suitability: {best_evaluation.channel_suitability}\")\n",
+    "print(f\"Comments: {best_evaluation.comments}\")"
    ]
   },
   {
@@ -394,7 +704,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Evaluator-optimizer"
+    "## 5. Evaluator-optimizer\n",
+    "\n",
+    "Note: an example could be having an agent rewrite posts (IDK if that's best here or somewhere else)."
    ]
   },
   {
