Create blog post

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1a. Idea generation\n",
+    "### 1a. Create ideas for what to promote.\n",
     "\n",
     "Here, let's create a first pass of our prompt for our idea generation step."
    ]
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1b. Idea evaluation\n",
+    "### 1b. Evaluate the created ideas.\n",
     "\n",
     "Now that we have all of these ideas, let's ask the LLM to evaluate the ideas and help us pick the best one."
    ]
@@ -639,7 +639,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_idea, best_evaluation = pick_highest_scoring_idea(\n",
+    "    ideas=generated_ideas,\n",
+    "    evaluations=evaluated_ideas\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -647,16 +659,17 @@
      "output_type": "stream",
      "text": [
       "Best idea: Brunch with a Cause\n",
-      "Best evaluation: idea_name='Brunch with a Cause' audience_fit=5 clarity=5 creativity=5 channel_suitability=5 comments='This campaign is highly engaging and appeals to social groups while supporting local charities. The clarity and creativity are strong, and it fits well with various marketing channels.'\n"
+      "Best evaluation:\n",
+      "\n",
+      "Audience Fit: 5\n",
+      "Clarity: 5\n",
+      "Creativity: 5\n",
+      "Channel Suitability: 5\n",
+      "Comments: This campaign is highly engaging and appeals to social groups while supporting local charities. The clarity and creativity are strong, and it fits well with various marketing channels.\n"
      ]
     }
    ],
    "source": [
-    "best_idea, best_evaluation = pick_highest_scoring_idea(\n",
-    "    ideas=generated_ideas,\n",
-    "    evaluations=evaluated_ideas\n",
-    ")\n",
-    "\n",
     "print(f\"Best idea: {best_idea.idea}\")\n",
     "print(f\"Best evaluation:\\n\")\n",
     "print(f\"Audience Fit: {best_evaluation.audience_fit}\")\n",
@@ -670,9 +683,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1e. Chaining it all together.\n",
+    "Great! We now have a flow to (1) create new marketing ideas and (2) review the ideas and score them so that we can pick the best one.\n",
+    "\n",
+    "Some possible concepts we can explore later on are:\n",
+    "1. Rewriting poor-rated ideas.\n",
+    "2. Generating multiple variations of high-potential ideas to test tone, format, or messaging.\n",
+    "3. See which ideas end up doing well, and then figure out what the best criteria to filter on are based on which of those ideas perform well.\n",
+    "4. Honing the tone and branding based on past examples of copywriting.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1c. Create an SEO-optimized blog post out of the idea.\n",
+    "\n",
+    "Given this idea, let's now create an SEO-optimized blog post."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'marketing_agent_examples.models' from '/Users/mark/Documents/work/demos/ai_agent_learning_examples/marketing_agent_examples/models.py'>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optional code snippet to reload the models module if the\n",
+    "# BlogPost import doesn't work. Jupyter notebooks can cache\n",
+    "# module imports.\n",
+    "import importlib\n",
+    "import marketing_agent_examples.models\n",
+    "\n",
+    "# Force reload the module\n",
+    "importlib.reload(marketing_agent_examples.models)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import BlogPost\n",
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=BlogPost)\n",
+    "\n",
+    "blog_post_instructions = parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blog_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "        You are a content marketer creating a blog post for an American-style brunch restaurant.\n",
+    "\n",
+    "        Your job is to write an SEO-optimized blog post based on the following campaign idea:\n",
+    "\n",
+    "        <idea>\n",
+    "        Name: {idea_name}\n",
+    "        Target Audience: {audience}\n",
+    "        Campaign Message: {message}\n",
+    "        Concept: {concept}\n",
+    "        </idea>\n",
+    "\n",
+    "        You must optimize this blog post for:\n",
+    "        - **Search Engine Visibility**: Use high-intent brunch-related keywords naturally throughout.\n",
+    "        - **Click-Through Rate**: Title and excerpt should be emotionally compelling, clear, and benefit-driven.\n",
+    "        - **Engagement**: Structure the content with subheadings, short paragraphs, and a clear flow.\n",
+    "        - **Audience Fit**: Make the tone match the specified audience. You may include humor, warmth, or health-focused language if appropriate.\n",
+    "\n",
+    "        Output Format:\n",
+    "        {format_instructions}\n",
+    "\n",
+    "        Success is defined as:\n",
+    "        - The title is both SEO-relevant and emotionally appealing.\n",
+    "        - The excerpt would make a reader want to click through.\n",
+    "        - The content clearly communicates the campaign idea while being useful, fun, and on-brand.\n",
+    "        - Keywords are relevant and well-targeted to brunch-goers and local audiences.\n",
+    "\"\"\",\n",
+    "    input_variables=[\"idea_name\", \"audience\", \"message\", \"concept\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_blog_post(idea: ProposedIdea) -> BlogPost:\n",
+    "    blog_post_full_prompt = blog_prompt.format(\n",
+    "        idea_name=idea.idea,\n",
+    "        audience=idea.audience,\n",
+    "        message=idea.campaign_message,\n",
+    "        concept=idea.concept\n",
+    "    )\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a helpful assistant.\"),\n",
+    "        HumanMessage(content=blog_post_full_prompt)\n",
+    "    ]\n",
+    "    response = llm.invoke(messages)\n",
+    "    return parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blog_post: BlogPost = create_blog_post(best_idea)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Best idea: {best_idea.idea}\")\n",
+    "print(\"Blog post:\\n\")\n",
+    "print(f\"Title: {blog_post.title}\")\n",
+    "print(f\"Slug: {blog_post.slug}\")\n",
+    "print(f\"Excerpt: {blog_post.excerpt}\")\n",
+    "print(f\"Content: {blog_post.content}\")\n",
+    "print(f\"Keywords: {blog_post.keywords}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1d. Evaluate the blog post."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1e. Create an email blast draft out of the blog post."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1f. Evaluate the email blast draft."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1g. Create social media captions and copy out of the blog post and email."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1h. Evaluate the social media captions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1i. Chaining it all together.\n",
     "\n",
     "Let's now chain all of these responses together."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1j. Takeaways and possible next steps."
    ]
   },
   {
