Evaluate blog post

--- a/marketing_agent_examples/basic_workflows.ipynb
+++ b/marketing_agent_examples/basic_workflows.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,9 +813,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best idea: Brunch with a Cause\n",
+      "Blog post:\n",
+      "\n",
+      "Title: Brunch with a Cause: Enjoy Delicious Food While Supporting Local Charities\n",
+      "Slug: brunch-with-a-cause\n",
+      "Excerpt: Join us for our monthly 'Brunch with a Cause' events! Gather your friends, indulge in an all-you-can-eat buffet, and make a difference in our community.\n",
+      "Content: ### Gather for Good: Brunch with a Cause\n",
+      "\n",
+      "Are you ready to elevate your brunch game? At our restaurant, we believe that brunch is not just a meal; it’s a celebration of friendship, community, and giving back. That’s why we’re excited to introduce our **Brunch with a Cause** events! \n",
+      "\n",
+      "Every month, we invite you and your social brunch groups to join us for a delightful all-you-can-eat buffet, where a portion of the proceeds goes directly to a local charity. It’s the perfect way to enjoy a leisurely brunch while making a positive impact in our community.\n",
+      "\n",
+      "### Why Brunch with a Cause?\n",
+      "Brunch is the ideal time to gather with friends, celebrate milestones, or simply enjoy a casual get-together. With our **Brunch with a Cause** initiative, you can do all that while supporting local charities that need our help. Whether you’re celebrating a birthday, a promotion, or just the joy of being together, you can feel good knowing that your brunch is making a difference.\n",
+      "\n",
+      "### What to Expect\n",
+      "- **Delicious Food**: Indulge in a mouthwatering selection of brunch favorites, from fluffy pancakes and savory omelets to fresh fruit and artisanal pastries. Our all-you-can-eat buffet is designed to satisfy every palate!\n",
+      "- **Community Spirit**: Each month, we partner with a different local charity, so you can learn about their mission and how your brunch helps them achieve their goals. It’s a great way to connect with your community and support causes you care about.\n",
+      "- **Fun Atmosphere**: Enjoy a lively and welcoming environment where laughter and good vibes are always on the menu. Bring your friends, family, or coworkers, and make it a brunch to remember!\n",
+      "\n",
+      "### Join Us!\n",
+      "Mark your calendars for our next **Brunch with a Cause** event! Check our website for dates and the featured charity of the month. Don’t miss out on the chance to enjoy great food, good company, and the satisfaction of giving back. \n",
+      "\n",
+      "### Spread the Word\n",
+      "Help us make a bigger impact by sharing our **Brunch with a Cause** events with your friends and family. The more, the merrier! Together, we can create a community that thrives on kindness and support.\n",
+      "\n",
+      "So, what are you waiting for? Gather your brunch crew and join us for a delicious meal that does good. We can’t wait to see you there!\n",
+      "Keywords: ['brunch with a cause', 'charity brunch', 'all-you-can-eat brunch', 'support local charities', 'brunch events', 'community brunch', 'social brunch gatherings', 'brunch for a cause']\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Best idea: {best_idea.idea}\")\n",
     "print(\"Blog post:\\n\")\n",
@@ -830,7 +865,163 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1d. Evaluate the blog post."
+    "### 1d. Evaluate the blog post.\n",
+    "\n",
+    "Now that we have a blog post, let's ask the LLM to evaluate our blog post and score it.\n",
+    "\n",
+    "Let's score our blog post on these criteria:\n",
+    "\n",
+    "| Criterion                  | Description                                          |\n",
+    "| -------------------------- | ---------------------------------------------------- |\n",
+    "| **SEO Optimization** (0–5) | Keyword use, metadata presence, search relevance     |\n",
+    "| **Clickability** (0–5)     | Emotional hook + clarity of title and excerpt        |\n",
+    "| **Readability** (0–5)      | Structure, formatting, paragraph length, headings    |\n",
+    "| **Audience Fit** (0–5)     | Language and tone tailored to the intended reader    |\n",
+    "| **Content Quality** (0–5)  | Informative, engaging, clear                         |\n",
+    "| **Comments**               | Summary of strengths and suggestions for improvement |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'marketing_agent_examples.models' from '/Users/mark/Documents/work/demos/ai_agent_learning_examples/marketing_agent_examples/models.py'>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# optional code snippet to reload the models module if the\n",
+    "# below import doesn't work. Jupyter notebooks can cache\n",
+    "# module imports.\n",
+    "import importlib\n",
+    "import marketing_agent_examples.models\n",
+    "\n",
+    "# Force reload the module\n",
+    "importlib.reload(marketing_agent_examples.models)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marketing_agent_examples.models import BlogPostEvaluation\n",
+    "\n",
+    "parser = PydanticOutputParser(pydantic_object=BlogPostEvaluation)\n",
+    "\n",
+    "blog_post_evaluation_instructions = parser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blog_post_evaluation_prompt = PromptTemplate(\n",
+    "    template=\"\"\"\n",
+    "        You are a senior SEO content editor evaluating a blog post for an American-style brunch restaurant.\n",
+    "\n",
+    "        Evaluate the post based on the following 5 criteria (0-5 scale):\n",
+    "        - **SEO Optimization**: Does the post use relevant keywords naturally? Is the title and excerpt search-friendly? Are metadata fields filled?\n",
+    "        - **Clickability**: Does the title and excerpt compel users to click? Is there emotional or benefit-driven language?\n",
+    "        - **Readability**: Is the post well-structured with good formatting (headings, paragraph length, etc)?\n",
+    "        - **Audience Fit**: Is the tone and language tailored to the intended audience?\n",
+    "        - **Content Quality**: Is it engaging, informative, and clear?\n",
+    "\n",
+    "        Also provide 2-3 sentences of comments on strengths and areas for improvement.\n",
+    "\n",
+    "        Blog post to evaluate:\n",
+    "\n",
+    "        Title: {title}\n",
+    "        Slug: {slug}\n",
+    "        Excerpt: {excerpt}\n",
+    "        Content: {content}\n",
+    "        Keywords: {keywords}\n",
+    "\n",
+    "        {format_instructions}\n",
+    "\"\"\",\n",
+    "    input_variables=[\"title\", \"slug\", \"excerpt\", \"content\", \"keywords\"],\n",
+    "    partial_variables={\"format_instructions\": parser.get_format_instructions()}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_blog_post(blog_post: BlogPost):\n",
+    "    prompt_text = blog_post_evaluation_prompt.format(\n",
+    "        title=blog_post.title,\n",
+    "        slug=blog_post.slug,\n",
+    "        excerpt=blog_post.excerpt,\n",
+    "        content=blog_post.content,\n",
+    "        keywords=\", \".join(blog_post.keywords),\n",
+    "    )\n",
+    "\n",
+    "    messages = [\n",
+    "        SystemMessage(content=\"You are a helpful evaluator of marketing content.\"),\n",
+    "        HumanMessage(content=prompt_text)\n",
+    "    ]\n",
+    "\n",
+    "    response = llm(messages)\n",
+    "    return parser.parse(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blog_post_evaluation = evaluate_blog_post(blog_post)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation for our blog post:\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'IdeaEvaluation' object has no attribute 'seo_optimization'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[80]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEvaluation for our blog post:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSEO Optimization: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mevaluation\u001b[49m\u001b[43m.\u001b[49m\u001b[43mseo_optimization\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mClickability: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mevaluation.clickability\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mReadability: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mevaluation.readability\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/ai_agent_learning_examples/lib/python3.12/site-packages/pydantic/main.py:991\u001b[39m, in \u001b[36mBaseModel.__getattr__\u001b[39m\u001b[34m(self, item)\u001b[39m\n\u001b[32m    988\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__getattribute__\u001b[39m(item)  \u001b[38;5;66;03m# Raises AttributeError if appropriate\u001b[39;00m\n\u001b[32m    989\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    990\u001b[39m     \u001b[38;5;66;03m# this is the current error\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m991\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m object has no attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mitem\u001b[38;5;132;01m!r}\u001b[39;00m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'IdeaEvaluation' object has no attribute 'seo_optimization'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Evaluation for our blog post:\\n\")\n",
+    "print(f\"SEO Optimization: {blog_post_evaluation.seo_optimization}\")\n",
+    "print(f\"Clickability: {blog_post_evaluation.clickability}\")\n",
+    "print(f\"Readability: {blog_post_evaluation.readability}\")\n",
+    "print(f\"Audience Fit: {blog_post_evaluation.audience_fit}\")\n",
+    "print(f\"Content Quality: {blog_post_evaluation.content_quality}\")\n",
+    "print(f\"Comments: {blog_post_evaluation.comments}\")"
    ]
   },
   {
